# boomslang

./: .blazar.yaml  .envrc  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md  build.mill  flake.nix  justfile  mill  pom.xml  rust-toolchain.toml
.github/workflows/: build.yml  docs.yml
benchmarks/: .blazar.yaml  dependency-reduced-pom.xml  pom.xml  pom.xml.bak
benchmarks/src/main/java/com/hubspot/boomslang/benchmarks/: PythonAsyncioBenchmark.java  PythonAsyncioReusedInstanceBenchmark.java  PythonExecutorBenchmark.java
benchmarks/src/main/java/com/hubspot/python4j/benchmarks/: PythonExecutorBenchmark.java
boomslang-hostgen/: Cargo.toml
boomslang-hostgen/src/: lib.rs  main.rs  tests.rs
boomslang-hostgen/templates/: java_host_functions.java  rust_host.rs
boomslang-py/: .blazar.yaml  .gitignore  README.md  pyproject.toml
boomslang-py/src/boomslang/: __init__.py  _assets.py  _async.py  _engine.py  _layout.py  _trampolines.py  errors.py  limits.py  result.py  sandbox.py
boomslang-py/tests/: conftest.py  test_async_host_functions.py  test_bytecode.py  test_execute.py  test_host_functions.py  test_limits.py  test_mounts.py  test_packages.py  test_stdin.py
builder/: Dockerfile
core/: .blazar.yaml  pom.xml
core/src/main/java/com/hubspot/boomslang/: AsyncHostRegistry.java  BoomslangExtension.java  CopyOnWriteMemory.java  HostBridge.java  MicropipFetchRequest.java  MicropipFetchResponse.java  MicropipHostRegistry.java  MicropipResolver.java  MicropipResolvers.java  PythonExecutorFactory.java  PythonInstance.java  PythonLibrary.java  PythonResult.java  ResettableByteArrayInputStream.java  ResourceLimits.java  RuntimeImage.java
core/src/main/java/com/hubspot/python4j/: CopyOnWriteMemory.java  HostBridge.java  PythonExecutorFactory.java  PythonInstance.java  PythonLibrary.java  PythonResult.java  ResettableByteArrayInputStream.java  RuntimeImage.java
core/src/main/resources/python-overlay/usr/local/lib/python3.14/boomslang_host/: asyncio.py
core/src/main/resources/python-overlay/usr/local/lib/python3.14/micropip/: _utils.py  constants.py  package_index.py
core/src/main/resources/python-overlay/usr/local/lib/python3.14/micropip-0.11.1.dist-info/: METADATA  RECORD
core/src/main/resources/python-overlay/usr/local/lib/python3.14/micropip/_compat/: _compat_not_in_pyodide.py
cpython/: .blazar.yaml  .gitignore  Dockerfile  Makefile
cpython-wasi/: .blazar.yaml  Dockerfile  build.sh  main.c
cpython/builder/: Dockerfile
cpython/cpython-wasi/: .blazar.yaml  Dockerfile  build.sh  split-ast-annotations.py
cpython/ijson-wasi/: .blazar.yaml  Dockerfile  harvest.sh  hubspot.build.json
cpython/lib/pydantic_core/: __init__.py
cpython/matplotlib-wasi/: .blazar.yaml  Dockerfile  _sysconfigdata__wasi_wasm32-wasi.py
cpython/numpy-wasi/: .blazar.yaml  Dockerfile  cross-wasi.ini  harvest.sh
cpython/numpy-wasi/shim-include/: shared_mutex
cpython/pandas-wasi/: .blazar.yaml  Dockerfile  harvest.sh  patch.py
cpython/pillow-wasi/: .blazar.yaml  Dockerfile  harvest.sh
cpython/pydantic-core-wasi/: .blazar.yaml  Cargo.toml  Dockerfile  build-local.sh
cpython/scripts/: build.sh
docs/: book.toml
docs/src/: SUMMARY.md  installation.md  introduction.md  quickstart.md
docs/src/contributing/: architecture.md  building.md  repo-map.md
docs/src/guide/: async.md  custom-python-builds.md  host-functions.md  lifecycle.md  other-hosts.md  python-host.md  python-modules.md  running-python.md  supported-libraries.md
docs/src/reference/: abi.md  api-docs.md  async-protocol.md  extension-abi.md  glossary.md  hostgen-dsl.md
examples/custom-host/: Cargo.toml  README.md  async-extension.toml
examples/custom-host/src/: lib.rs
examples/custom-python-build/: Cargo.toml  README.md
examples/rust-host/: Cargo.toml  README.md  build.rs
examples/rust-host/abi/: boomslang_host.abi.json  demo_async.abi.json
examples/rust-host/src/: main.rs
extensions/demo/: Cargo.toml  build.rs  extension.toml
extensions/demo/lib/demo/: __init__.py
extensions/demo/src/: lib.rs
extensions/host-bridge/: Cargo.toml  build.rs  extension.toml
extensions/host-bridge/lib/boomslang_host/: __init__.py  asyncio.py
extensions/host-bridge/lib/python4j_host/: __init__.py
extensions/host-bridge/src/: lib.rs
matplotlib-wasi/: Dockerfile  _sysconfigdata__wasi_wasm32-wasi.py  cross-wasi.ini  harvest.sh  patch.py  pyconfig-wasi.h
matplotlib-wasi/shim-include/: setjmp.h
numpy-wasi/: patch.py
pandas-wasi/: .blazar.yaml  Dockerfile  cross-wasi.ini
py4j-hostgen/: Cargo.toml
py4j-hostgen/src/: lib.rs  main.rs
pydantic-core-wasi/: .blazar.yaml  .gitignore
python-host/: Cargo.toml  build-wasm.sh  build.rs  test-build-wasm.sh
python-host-core/: Cargo.toml  build.rs
python-host-core/src/: builtins.rs  export.rs  lib.rs
python-host/src/: api.rs  ext_demo.rs  lib.rs  stubs.rs
scripts/: build-python-wheel.sh  ensure-lfs-runtime-resources.sh  fetch-main-runtime-resources.sh  install-micropip-runtime.sh  stage-python-runtime.sh
tests/: .blazar.yaml  pom.xml
tests/src/test/java/com/hubspot/boomslang/tests/: HostBridgeTest.java  InstanceExtensionTest.java  MicropipTest.java  PythonExecutorTest.java  SharedTestSetup.java
tests/src/test/java/com/hubspot/python4j/tests/: DemoHostFunctions.java  HostBridgeTest.java  HostFunctionExtensionTest.java  PythonExecutorTest.java  SharedTestSetup.java
