[package]
name = "boomslang-hostgen"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
description = "Code generator for boomslang host function extensions (Python-in-Java via WASM)"
repository = "https://github.com/HubSpot/boomslang"
keywords = ["python", "wasm", "chicory", "codegen"]
categories = ["development-tools::build-utils"]

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
heck = "0.5"
clap = { version = "4", features = ["derive"], optional = true }

[features]
default = ["cli"]
cli = ["clap"]

[[bin]]
name = "boomslang-hostgen"
required-features = ["cli"]
