[package]
name = "py4j-hostgen"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
heck = "0.5"
clap = { version = "4", features = ["derive"], optional = true }

[features]
default = ["cli"]
cli = ["clap"]

[[bin]]
name = "py4j-hostgen"
required-features = ["cli"]
