[package]
name = "boomslang-host-core"
version = "0.0.1"
edition = "2024"
links = "boomslang_host_core"
license = "Apache-2.0"
description = "Core library for building boomslang WASM hosts — CPython 3.14 + PyO3 exports for Java"
repository = "https://github.com/HubSpot/boomslang"
keywords = ["python", "wasm", "chicory", "pyo3"]
categories = ["wasm"]

[lib]
crate-type = ["rlib"]

[dependencies]
pyo3 = { version = "0.26.0", default-features = false, features = ["macros"] }
libmimalloc-sys = "0.1"

[build-dependencies]
