[package]
name = "python4j_host"
version = "0.1.0"
edition = "2024"
description = "Stock python4j WASM host with host-bridge extension."

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "s"
lto = "thin"

[dependencies]
python4j-host-core = { path = "../python-host-core" }
python4j-ext-host-bridge = { path = "../extensions/host-bridge" }
