[package]
name = "boomslang_host"
version = "0.1.0"
edition = "2024"
description = "Stock boomslang WASM host with host-bridge extension."

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "s"
lto = "thin"

[dependencies]
boomslang-host-core = { path = "../python-host-core" }
boomslang-ext-host-bridge = { path = "../extensions/host-bridge" }
