[package]
name = "boomslang-rust-host-example"
version = "0.1.0"
edition = "2024"
publish = false
description = "Example: wiring boomslang ABI JSON into a Rust WASM runtime host."

[dependencies]
anyhow = "1"
boomslang-hostgen = { path = "../../boomslang-hostgen", default-features = false }
serde_json = "1"
wasmtime = "43"

[dev-dependencies]
wat = "1"
